修改表格字段为json
